# catfact

./: README.md  README.qmd  pyproject.toml  search.json  setup.py
.github/workflows/: ci.yml
catfact/: __init__.py  _databackend.py  misc.py  polars.py  reorder.py  values.py
catfact/tests/: test_fct_order.py  test_fct_values.py
docs/: _quarto.yml
docs/guide/: fct-namespace.qmd  overview.qmd  pandas.qmd  polars.qmd
guide/: fct-namespace.html  overview.html  pandas.html  polars.html
reference/: cats.html  collapse.html  data.gdp.html  data.ratings.html  data.ratings_messy.html  data.starwars.html  factor.html  index.html  infreq.html  inorder.html  inseq.html  lump_lowfreq.html  lump_min.html  lump_n.html  lump_prop.html  recode.html  relevel.html  reorder.html  rev.html
